adaptive index full & js navbar

--- a/public/404.html
+++ b/public/404.html
@@ -44,10 +44,10 @@
       </div>
     </header>
     <main>
-      <section class="bg-gradient error">
+      <section class="bg-gradient error-page">
         <div class="container text-center">
-          <h1 class="error__title">Ошибка 404</h1>
-          <p class="error__offer">страница не найдена или не существует</p>
+          <h1 class="error-page__title">Ошибка 404</h1>
+          <p class="error-page__offer">страница не найдена или не существует</p>
           <div class="line"></div>
           <p class="text-small">Воспользуйтесь поиском или <a class="text-bold link-white" href="/">вернитесь на главную страницу</a></p>
           <form class="form form_search" action="">
